fix spacing

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -346,8 +346,8 @@ footer {
 #contactForm textarea, 
 #contactForm button {
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 #contactForm button {
